--- a/themes/vitorlevi/layouts/partials/header.html
+++ b/themes/vitorlevi/layouts/partials/header.html
@@ -1,12 +1,12 @@
 <html>
 <head>
   <title>{{ .Title }}</title>
-  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}semantic/dist/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/style.css">
   <script
     src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
-  <script src="{{ .Site.BaseURL }}semantic/dist/semantic.min.js"></script>
+  <script src="{{ .Site.BaseURL }}js/semantic.min.js"></script>
 </head>
 <body>
